<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/footer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:background="#005cd9"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:clickable="true"
        android:id="@+id/btn_share"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="@dimen/dp4"
        android:padding="@dimen/dp4">

        <Button
            android:layout_width="@dimen/dp24"
            android:layout_height="@dimen/dp24"
            android:layout_marginBottom="@dimen/dp4"
            android:background="@mipmap/share" />

        <com.umbrellaapps.urdu.keyboard.custom.ExTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/share"
            android:textColor="#ffffff"
            android:textAllCaps="true"
            android:textSize="@dimen/sp10"
            app:font="Montserrat-Regular.otf" />
    </LinearLayout>

    <LinearLayout
        android:clickable="true"
        android:id="@+id/btn_more_apps"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dp4">

        <Button
            android:layout_width="@dimen/dp24"
            android:layout_height="@dimen/dp24"
            android:layout_marginBottom="@dimen/dp4"
            android:background="@mipmap/more_apps" />

        <com.umbrellaapps.urdu.keyboard.custom.ExTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/more_apps"
            android:textColor="#ffffff"
            android:textAllCaps="true"
            android:textSize="@dimen/sp10"
            app:font="Montserrat-Regular.otf" />
    </LinearLayout>

    <LinearLayout
        android:clickable="true"
        android:id="@+id/btn_remove_ads"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dp4">


        <LinearLayout
            android:clickable="true"
            android:id="@+id/btn_rate"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dp4">

            <Button
                android:layout_width="@dimen/dp24"
                android:layout_height="@dimen/dp24"
                android:layout_marginBottom="@dimen/dp4"
                android:background="@mipmap/rate_us" />

            <com.umbrellaapps.urdu.keyboard.custom.ExTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/rate"
                android:textColor="#ffffff"
                android:textAllCaps="true"
                android:textSize="@dimen/sp10"
                app:font="Montserrat-Regular.otf" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>