<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.umbrellaapps.urdu.keyboard.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/buttons_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp20"
                android:layout_weight="6.65"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginBottom="@dimen/dp8">

                    <Button
                        android:id="@+id/btn_enable"
                        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp50"
                        android:contextClickable="false"
                        android:gravity="center_vertical|left"
                        android:paddingLeft="@dimen/dp70"
                        android:paddingStart="@dimen/dp70"
                       android:text="@string/enable_keyboard"
                        android:textColor="#000000"
                        android:layout_alignBottom="@+id/btn_enable_icon"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:id="@+id/btn_enable_icon"
                        android:layout_width="@dimen/dp40"
                        android:layout_height="@dimen/dp40"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp20"
                        android:layout_marginStart="@dimen/dp30"
                        android:background="@mipmap/enable_keybord" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginBottom="@dimen/dp8">

                    <Button
                        android:id="@+id/btn_select"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp50"
                        android:gravity="center_vertical|left"
                        android:paddingLeft="@dimen/dp70"
                        android:paddingStart="@dimen/dp70"
                        android:text="@string/select_keyboard"
                        android:textColor="#000000"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:id="@+id/btn_select_icon"
                        android:layout_width="@dimen/dp40"
                        android:layout_height="@dimen/dp40"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp20"
                        android:layout_marginStart="@dimen/dp40"
                        android:background="@mipmap/select_keybord" />

                </RelativeLayout>



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginBottom="@dimen/dp8">

                    <Button
                        android:id="@+id/btn_select_language"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp50"
                        android:gravity="center_vertical|left"
                        android:paddingLeft="@dimen/dp70"
                        android:paddingStart="@dimen/dp70"
                        android:text="Select Languages"
                        android:textColor="#000000"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:id="@+id/btn_select_language_icon"
                        android:layout_width="@dimen/dp40"
                        android:layout_height="@dimen/dp40"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp20"
                        android:layout_marginStart="@dimen/dp40"
                        android:background="@mipmap/select_keybord" />

                </RelativeLayout>



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginBottom="@dimen/dp8">

                    <Button
                        android:id="@+id/btn_themes"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp50"
                        android:gravity="center_vertical|left"
                        android:paddingLeft="@dimen/dp70"
                        android:paddingStart="@dimen/dp70"
                        android:text="@string/themes"
                        android:textColor="@color/candidate_normal"
                        android:layout_alignBottom="@+id/btn_themes_icon"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />


                    <TextView
                        android:id="@+id/btn_themes_icon"
                        android:layout_width="@dimen/dp40"
                        android:layout_height="@dimen/dp40"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp20"
                        android:layout_marginStart="@dimen/dp40"
                        android:background="@mipmap/themes" />

                </RelativeLayout>

                
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginBottom="@dimen/dp8">

                    <Button
                        android:id="@+id/btn_select_Tune"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp50"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center_vertical|left"
                        android:paddingLeft="@dimen/dp70"
                        android:paddingStart="@dimen/dp70"
                        android:text="Select Tune"
                        android:textColor="@color/candidate_normal" />

                    <TextView
                        android:id="@+id/btn_select_Tune_icon"
                        android:layout_width="@dimen/dp40"
                        android:layout_height="@dimen/dp40"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp20"
                        android:layout_marginStart="@dimen/dp40"
                        android:background="@drawable/sound" />
                </RelativeLayout>


















                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginBottom="@dimen/dp8">

                    <Button
                        android:id="@+id/btn_settings"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp50"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center_vertical|left"
                        android:paddingLeft="@dimen/dp70"
                        android:paddingStart="@dimen/dp70"
                        android:text="@string/settings"
                        android:textColor="@color/candidate_normal" />

                    <TextView
                        android:id="@+id/btn_settings_icon"
                        android:layout_width="@dimen/dp40"
                        android:layout_height="@dimen/dp40"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/dp20"
                        android:layout_marginStart="@dimen/dp40"
                        android:background="@mipmap/settings" />
                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <fragment
        android:id="@+id/footer_fragment"
        android:name="com.umbrellaapps.urdu.keyboard.FooterFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/footer"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer_fragment"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</RelativeLayout>
